--- a/config/proxy.conf
+++ b/config/proxy.conf
@@ -1,17 +1,23 @@
-host "192.168.56.103:8080" {
-    proxy_pass http://192.168.56.103:9000;
+# Cấu hình cho Proxy chính
+host "10.130.23.14:8080" {
+    # Chuyển hướng về Backend chạy trên cùng máy ở port 9000
+    proxy_pass http://10.130.23.14:9000;
 }
 
+# Cấu hình cho tên miền ảo app1 (nếu bạn có map file hosts, nếu không cứ để nguyên để tham khảo)
 host "app1.local" {
-    proxy_pass http://192.168.56.103:9001;
+    proxy_pass http://10.130.23.14:9001;
 }
 
+# Cấu hình Load Balancing (Cân bằng tải)
 host "app2.local" {
     proxy_set_header Host $host;
 
-    proxy_pass http://192.168.56.210:9002;
-    proxy_pass http://192.168.56.220:9002;
-	
-
+    # Vì bạn chỉ có 1 máy, ta trỏ cả 2 dòng này về cùng 1 IP của bạn
+    # Nhưng để mô phỏng 2 server khác nhau, ta dùng 2 port khác nhau (9002 và 9003)
+    # Hoặc nếu bạn chỉ chạy 1 backend cho phần này, hãy trỏ cả 2 về cùng port 9002
+    proxy_pass http://10.130.23.14:9002;
+    proxy_pass http://10.130.23.14:9002; 
+    
     dist_policy round-robin
 }
